tests/spec/non_conformant/errors/import/miss/test_loop/test_for.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/miss/loop/for.hrx"

// Ignoring "test", error tests are not supported yet.
